<resources>
    <string name="app_name">AttendMe</string>
    <string name="ask">Are you teacher or student ?</string>
    <string name="teacher">TEACHER</string>
    <string name="student">STUDENT</string>
    <string name="teachername">Enter name</string>
    <string name="studentname">Enter name</string>
    <string name="studentroll">Enter roll number</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_list_of_classes">ListOfClasses</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="subjectname">Enter subject Name</string>
    <string name="branch_title">Enter Branch</string>
    <string name="stream_title">Enter Stream</string>
    <string name="session_title">Choose Session</string>
    <string-array name="streams">
        <item>M.Tech</item>
        <item>MCA</item>
        <item>M.Sc</item>
        <item>B.Tech</item>
        <item>Diploma</item>
        <item>Other</item>
    </string-array>
    <string-array name="branches">
        <item>Computer Science</item>
        <item>Mechanical</item>
        <item>Civil</item>
        <item>Electrical</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Aerospace</item>
        <item>Metallurgy</item>
        <item>Electronic</item>
        <item>Chemical</item>
        <item>Information Technology</item>
        <item>Other</item>
    </string-array>
</resources>